base/kong-deployment.yaml
# kong-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kong
  template:
    metadata:
      labels:
        app: kong
    spec:
      containers:
        - name: kong
          image: kong/kong-gateway:3.5.0.0-alpine
          ports:
            - containerPort: 8000
            - containerPort: 8001
